<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/now_playing_img"
                android:layout_width="100dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/light_gray"
                />

            <TextView
                android:id="@+id/now_playing_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/title_movie"
                android:textStyle="bold"
                android:textSize="@dimen/letter_medium"
                app:layout_constraintStart_toEndOf="@+id/now_playing_img"
                app:layout_constraintTop_toTopOf="@+id/now_playing_img"
                />

            <TextView
                android:id="@+id/now_playing_release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textStyle="italic"
                android:textSize="@dimen/letter_xsmall"
                app:layout_constraintStart_toStartOf="@+id/now_playing_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/now_playing_title_tv"
                />

            <TextView
                android:id="@+id/now_playing_overview_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:maxLength="170"
                android:text="@string/overview"
                android:textSize="@dimen/letter_xsmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/now_playing_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/now_playing_release_date_tv"
                />

            <LinearLayout
                android:id="@+id/layout_bottom"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/now_playing_img">

                <Button
                    android:id="@+id/now_playing_goto_detail_btn"
                    style="@style/ButtonGeneral"
                    android:text="@string/detail"
                    android:backgroundTint="@color/red_dark"
                    />

                <Button
                    android:id="@+id/now_playing_share_btn"
                    style="@style/ButtonGeneral"
                    android:text="@string/share"
                    android:backgroundTint="@color/dark_green"
                    />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>